--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <a href="#" class="btn">Download CV</a>
             </div>
             <div class="social-icons">
-                <a href="#"><i class="bxl bx-linkedin"></i></a>
-                <a href="#"><i class="bxl bx-instagram"></i></a>
-                <a href="#"><i class="bxl bx-github"></i></a>
+                <a href="https://www.linkedin.com/in/aman-rajesh-patel/"><i class="bxl bx-linkedin"></i></a>
+                <a href="https://instagram.com/aman.1152"><i class="bxl bx-instagram"></i></a>
+                <a href="https://github.com/amanstar26"><i class="bxl bx-github"></i></a>
             </div>
         </div>
         <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.6.2/dist/dotlottie-wc.js" type="module"></script>
