--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="btn-box">
-                <a href="#" class="btn">Download CV</a>
+                <a href="https://drive.google.com/file/d/1ITy4QNdhpMmY90DkVPKMc_7qh8przrf0" target="_blank" class="btn">Download CV</a>
             </div>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/aman-rajesh-patel/"><i class="bxl bx-linkedin"></i></a>
